# Aster-Mail

./: Dockerfile  README.md  e2e_family.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.limit.ts  playwright.config.local.ts  playwright.config.paid.ts  playwright.config.repro.ts  playwright.config.switch.ts  playwright.config.ui.ts  playwright.round_trip.config.ts  playwright.secure_view.config.ts  vite.config.ts
.github/workflows/: release.yml  sign_macos.yml
src/: App.tsx  main.tsx  mobile_app.tsx  provider.tsx  sw.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/device/: crypto.rs
src/contexts/: external_link_context.tsx  preferences_context.tsx
src/data/: category_signals.ts
src/hooks/: editor_utils.ts  email_list_helpers.ts  use_category_inbox.ts  use_drafts_list.ts  use_editor.ts  use_email_list.ts  use_email_list_actions.ts  use_email_list_bulk.ts  use_folders.ts  use_inbox_categories.ts  use_mail_counts.ts  use_search.ts  use_sidebar_aliases.ts  use_subscriptions.ts
src/lib/: canonical_urls.ts  cid_resolver.ts  email_body_styles.ts  hard_redirect.ts  html_sanitizer.ts  html_sanitizer.xss.test.ts  html_sanitizer_constants.ts  html_sanitizer_css.ts  is_official_sender.test.ts  primary_identity.ts  utils.ts  version_check.ts
src/native/: deep_link_handler.ts  desktop_device_auth.ts
src/pages/: email_detail_page.tsx  index.tsx  join_family.tsx  link_device.tsx  register.tsx  secure_view.tsx  sign_in.tsx  unsupported_browser.tsx
src/services/: app_lock_store.ts  category_index.ts  device_id.ts  key_rotation_service.ts  mail_actions.ts  mail_actions_reply_attachments.test.ts  mail_categorizer.test.ts  mail_categorizer.ts  notification_service.ts  send_queue_encryption.ts  send_queue_types.ts  (+5 more)
updates/: README.md  latest.json
(+272 files in other folders)
