[package]
name = "aster-mail-desktop"
version = "1.4.5"
edition = "2021"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["socks", "rustls-tls", "charset", "http2", "cookies", "macos-system-configuration"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"
x509-parser = "0.16"
subtle = "2"
tracing = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = "0.2"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
zeroize = "1"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
whoami = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[patch.crates-io]
glib = { path = "patches/glib-0.18.5" }
atty = { path = "patches/atty-0.2.14" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
